@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<CIM CIMVERSION="2.0" DTDVERSION="2.0">
+<MESSAGE ID="87872" PROTOCOLVERSION="1.0">
+<SIMPLERSP>
+<METHODRESPONSE NAME="CheckArrayNoType">
+<RETURNVALUE PARAMTYPE="string">
+<VALUE>Datatype is 160</VALUE>
+</RETURNVALUE>
+</METHODRESPONSE>
+</SIMPLERSP>
+</MESSAGE>
+</CIM>
