@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<CIM CIMVERSION="2.0" DTDVERSION="2.0">
+ <MESSAGE ID="87872" PROTOCOLVERSION="1.0">
+  <SIMPLEREQ>
+    <METHODCALL NAME="CheckArrayNoType">
+      <LOCALCLASSPATH>
+        <LOCALNAMESPACEPATH>
+          <NAMESPACE NAME="root"/>
+          <NAMESPACE NAME="cimv2"/>
+        </LOCALNAMESPACEPATH>
+        <CLASSNAME NAME="Sample_Method"/>
+       </LOCALCLASSPATH>
+       <PARAMVALUE NAME="IntArray">
+        <VALUE.ARRAY><VALUE>4</VALUE></VALUE.ARRAY>
+       </PARAMVALUE>
+     </METHODCALL>
+   </SIMPLEREQ>
+ </MESSAGE>
+</CIM>
+
