@@ -24,6 +24,7 @@ Bugs fixed:
 - 3012365 enableIndications() only called once per provider group
 - 3026606 Prov idle unload may not call all cleanup functions
 - 3048944 Bump downloaded CIM schema to 2.26
+- 3048960 method array types not filled in
 
 Changes in 1.3.8
 ================
