@@ -1,3 +1,8 @@
+2010-08-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+	*  cimXmlRequest.c test/TestProviders/cmpiTestMethodProvider.c,
+		test/schema/root/cimv2/Test_Method.mof 
+	[ 3048960 ] method array types not filled in
+
 2010-08-19  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* getSchema.sh.pre.in:
